# monorepussy

./: ARCHIVED_REPOS.md  CI_CD_QUICK_REFERENCE.md  LICENSE  MIGRATION_PLAN.md  MONOREPO_DESIGN.md  PACKAGE_MATRIX.md  README.md  USSYVERSE_CI_CD_ARCHITECTURE.md  cambium.db  mkdocs.yml  operon.db  pyproject.toml  ussyverse_triage_report.md
.github/workflows/: ci.yml  docs.yml  nightly.yml  release.yml
docs/: architecture.md  contributing.md  index.md  migration-guide.md
docs/adr/: adr-001-monorepo.md  index.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
scripts/: bootstrap.sh  detect_changes.py  migrate-repo.sh  partition_tests.py  release.sh  release_checklist.py  run_test_group.py  scaffold-package.sh
