[project]
name = "ussyverse"
version = "2025.1.0"
description = "The Ussyverse — 50+ Python tools for code quality, security, and forensics"
requires-python = ">=3.11"
dependencies = [
    "ussy-core",
    "ussy-cli",
    "ussy-git",
    "ussy-ast",
    "ussy-sqlite",
    "ussy-report",
    "ussy-triage",
    "ussy-sentinel",
    "ussy-gridiron",
    "ussy-parliament",
    "ussy-stratax",
    "ussy-kintsugi",
    "ussy-assay",
    "ussy-petrichor",
    "ussy-snapshot",
    "ussy-churn",
    "ussy-steno",
    "ussy-calibre",
    "ussy-strata",
]

[tool.uv.workspace]
members = [
    "packages/libs/*",
    "packages/tools/forensics/*",
    "packages/tools/security/*",
    "packages/tools/visualization/*",
    "packages/tools/quality/*",
    "packages/tools/deps/*",
    "packages/tools/triage/*",
    "packages/tools/governance/*",
    "packages/tools/devtools/*",
    "packages/apps/*",
]
exclude = ["packages/archive"]

[tool.uv.sources]
ussy-core = { workspace = true }
ussy-cli = { workspace = true }
ussy-git = { workspace = true }
ussy-ast = { workspace = true }
ussy-sqlite = { workspace = true }
ussy-report = { workspace = true }
ussy-triage = { workspace = true }
ussy-sentinel = { workspace = true }
ussy-gridiron = { workspace = true }
ussy-parliament = { workspace = true }
ussy-stratax = { workspace = true }
ussy-kintsugi = { workspace = true }
ussy-assay = { workspace = true }
ussy-petrichor = { workspace = true }
ussy-snapshot = { workspace = true }
ussy-churn = { workspace = true }
ussy-steno = { workspace = true }
ussy-calibre = { workspace = true }
ussy-strata = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5",
    "pytest-asyncio>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.optional-dependencies]
sci = ["numpy>=1.24", "scipy>=1.10"]
cli = ["click>=8.1", "rich>=13.0", "rich-click>=1.0"]
git = ["gitpython>=3.1"]
graph = ["networkx>=3.0"]
web = ["requests>=2.25", "httpx>=0.24", "websockets>=11.0"]
config = ["pyyaml>=6.0"]
viz = ["matplotlib>=3.7"]
compress = ["zstandard>=0.20"]
mining = ["pydriller>=2.6"]
all = ["ussyverse[sci,cli,git,graph,web,config,viz,compress,mining]"]

[tool.pytest.ini_options]
testpaths = ["packages"]
norecursedirs = [".venv", "__pycache__"]
addopts = "-n auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
