[project]
name = "ussyverse"
version = "2025.1.0"
description = "The Ussyverse — 50+ Python tools for code quality, security, and forensics"
requires-python = ">=3.11"
dependencies = [
    "ussy-core",
    "ussy-cli",
    "ussy-git",
    "ussy-ast",
    "ussy-sqlite",
    "ussy-report",
    "ussy-triage",
    "ussy-sentinel",
    "ussy-gridiron",
    "ussy-parliament",
    "ussy-stratax",
    "ussy-kintsugi",
    "ussy-assay",
    "ussy-petrichor",
    "ussy-snapshot",
    "ussy-churn",
    "ussy-steno",
    "ussy-calibre",
    "ussy-strata",
    "ussy-chromato",
    "ussy-cambium",
    "ussy-deps",
    "ussy-propriocept",
    "ussy-curator",
    "ussy-operon",
    "ussy-portmore",
    "ussy-syntrop",
    "ussy-fossilrecord",
    "ussy-telegrapha",
    "ussy-mushin",
    "ussy-gamut",
    "ussy-cyclone",
    "ussy-isobar",
    "ussy-circadia",
    "ussy-fatigue",
    "ussy-endemic",
    "ussy-stemma",
    "ussy-crystallo",
    "ussy-terrarium",
    "ussy-tarot",
    "ussy-actuary",
    "ussy-coroner",
    "ussy-mint",
    "ussy-dosemate",
    "ussy-cavity",
    "ussy-aquifer",
    "ussy-seral",
    "ussy-plan9webplumb",
    "ussy-reverseoracle",
    "ussy-timeloom",
]

[project.optional-dependencies]
sci = [
    "numpy>=1.24",
    "scipy>=1.10",
]
cli = [
    "click>=8.1",
    "rich>=13.0",
    "rich-click>=1.0",
]
git = [
    "gitpython>=3.1",
]
graph = [
    "networkx>=3.0",
]
web = [
    "requests>=2.25",
    "httpx>=0.24",
    "websockets>=11.0",
]
config = [
    "pyyaml>=6.0",
]
viz = [
    "matplotlib>=3.7",
]
compress = [
    "zstandard>=0.20",
]
mining = [
    "pydriller>=2.6",
]
all = [
    "ussyverse[sci,cli,git,graph,web,config,viz,compress,mining]",
]

[tool.uv.workspace]
members = [
    "packages/libs/*",
    "packages/tools/forensics/*",
    "packages/tools/security/*",
    "packages/tools/visualization/*",
    "packages/tools/quality/*",
    "packages/tools/deps/*",
    "packages/tools/triage/*",
    "packages/tools/governance/*",
    "packages/tools/devtools/*",
    "packages/tools/ussy-*",
    "packages/apps/*",
]
exclude = [
    "packages/archive",
]

[tool.uv.sources.ussy-core]
workspace = true

[tool.uv.sources.ussy-cli]
workspace = true

[tool.uv.sources.ussy-git]
workspace = true

[tool.uv.sources.ussy-ast]
workspace = true

[tool.uv.sources.ussy-sqlite]
workspace = true

[tool.uv.sources.ussy-report]
workspace = true

[tool.uv.sources.ussy-triage]
workspace = true

[tool.uv.sources.ussy-sentinel]
workspace = true

[tool.uv.sources.ussy-gridiron]
workspace = true

[tool.uv.sources.ussy-parliament]
workspace = true

[tool.uv.sources.ussy-stratax]
workspace = true

[tool.uv.sources.ussy-kintsugi]
workspace = true

[tool.uv.sources.ussy-assay]
workspace = true

[tool.uv.sources.ussy-petrichor]
workspace = true

[tool.uv.sources.ussy-snapshot]
workspace = true

[tool.uv.sources.ussy-churn]
workspace = true

[tool.uv.sources.ussy-steno]
workspace = true

[tool.uv.sources.ussy-calibre]
workspace = true

[tool.uv.sources.ussy-strata]
workspace = true

[tool.uv.sources.ussy-chromato]
workspace = true

[tool.uv.sources.ussy-cambium]
workspace = true

[tool.uv.sources.ussy-deps]
workspace = true

[tool.uv.sources.ussy-isobar]
workspace = true

[tool.uv.sources.ussy-circadia]
workspace = true

[tool.uv.sources.ussy-fatigue]
workspace = true

[tool.uv.sources.ussy-endemic]
workspace = true

[tool.uv.sources.ussy-stemma]
workspace = true

[tool.uv.sources.ussy-crystallo]
workspace = true

[tool.uv.sources.ussy-terrarium]
workspace = true

[tool.uv.sources.ussy-tarot]
workspace = true

[tool.uv.sources.ussy-actuary]
workspace = true

[tool.uv.sources.ussy-coroner]
workspace = true

[tool.uv.sources.ussy-mint]
workspace = true

[tool.uv.sources.ussy-dosemate]
workspace = true

[tool.uv.sources.ussy-cavity]
workspace = true

[tool.uv.sources.ussy-aquifer]
workspace = true

[tool.uv.sources.ussy-seral]
workspace = true

[tool.uv.sources.ussy-plan9webplumb]
workspace = true

[tool.uv.sources.ussy-reverseoracle]
workspace = true

[tool.uv.sources.ussy-timeloom]
workspace = true

[tool.uv.sources.ussy-propriocept]
workspace = true

[tool.uv.sources.ussy-curator]
workspace = true

[tool.uv.sources.ussy-operon]
workspace = true

[tool.uv.sources.ussy-portmore]
workspace = true

[tool.uv.sources.ussy-syntrop]
workspace = true

[tool.uv.sources.ussy-fossilrecord]
workspace = true

[tool.uv.sources.ussy-telegrapha]
workspace = true

[tool.uv.sources.ussy-mushin]
workspace = true

[tool.uv.sources.ussy-gamut]
workspace = true

[tool.uv.sources.ussy-cyclone]
workspace = true

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.pytest.ini_options]
testpaths = [
    "packages",
]
norecursedirs = [
    ".venv",
    "__pycache__",
    "demo",
]
addopts = "-n auto --import-mode=importlib"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5",
    "pytest-asyncio>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
